--- a/BizwebTutorial/Assets/FrontEndCss/HomeStyle.css
+++ b/BizwebTutorial/Assets/FrontEndCss/HomeStyle.css
@@ -126,7 +126,7 @@
 .product_title h3 a {
     word-break: break-word;
     font-size: 16px;
-    color: #e24d85;
+    color: #000000;
     font-family: 'Roboto', sans-serif;
     line-height: 18px;
     font-weight: bolder;
