--- a/BizwebTutorial/Views/ProductView/Details.cshtml
+++ b/BizwebTutorial/Views/ProductView/Details.cshtml
@@ -11,53 +11,55 @@
 
 <div class="row" style="padding-top:70px;">
     <div class="col-md-6 col-sm-6 col-xs-12 ">
-        <ul id="imageGallery">
-            @foreach (var item in Model.ListImage)
+        <div class="demo">
+            <ul id="lightSlider">
+                @foreach (var item in Model.ListImage)
             {
-                <li data-thumb="@Url.Content(item.PathImage)" data-src="@Url.Content(item.PathImage)">
-                    <img src="@Url.Content(item.PathImage)" />
-                </li>
-            }  
-        </ul>
-    </div>
-    <div class="col-md-6 col-sm-6 col-xs-12 mar_bt_15">
-        <h3><strong>@Model.Name</strong></h3>
-        <label class="control-label cm-strong">Mã Số Sản Phẩm : @Model.Sku/@Model.Barcode</label>
-        <h3 style="color:#e24d85;font-size:30px;">@Model.Price ₫<label class="control-label cm-strong" style="margin-left:15px;font-size:15px;"><STRIKE>@Model.OldPrice ₫</STRIKE></label></h3>
-        <label class="control-label cm-strong">Số Lượng:</label>
-        <input class="form-control inputnumberquan" type="number" value="1" />
-        <hr />
-        <label class="control-label cm-strong">Sơ Lược Về Sản Phẩm :</label>
-        <p class="metadescript">@Html.Raw(HttpUtility.HtmlDecode(Model.ShortDescription))</p>
-        <hr />
-        <div class="dataproduct" data-id="@Model.Id" data-name="@Model.Name" data-quantity="" data-price="@Model.Price" data-image="@Url.Content(Model.ListImage.FirstOrDefault().PathImage)">
-            @{
-                Html.RenderAction("AddDetail", "ProductView");
-            }
-        </div>
-    </div>
-    <div class="col-md-12 col-sm-12 col-xs-12" style="margin-top:10px;">
-        <div class="panel panel-default" >
-            <div id="Tabs" role="tabpanel">
-                <!-- Nav tabs -->
-                <ul class="nav nav-tabs" role="tablist">
-                    <li class="active">
-                        <a href="#personal" aria-controls="personal" role="tab" data-toggle="tab" aria-expanded="true">
-                            Mô Tả
-                        </a>
+                    <li data-thumb="@Url.Content(item.PathImage)">
+                        <img src="@Url.Content(item.PathImage)" />
                     </li>
-                    <li class=""><a href="#employment" aria-controls="employment" role="tab" data-toggle="tab" aria-expanded="false">Tags</a></li>
+                }
                 </ul>
-                <!-- Tab panes -->
-                <div class="tab-content" style="padding-top: 20px">
-                    <div role="tabpanel" class="tab-pane active" id="personal">
-                       @Html.Raw(HttpUtility.HtmlDecode(Model.Descripstion))
+            </div>
+        </div>
+        <div class="col-md-6 col-sm-6 col-xs-12 mar_bt_15">
+            <h3><strong>@Model.Name</strong></h3>
+            <label class="control-label cm-strong">Mã Số Sản Phẩm : @Model.Sku/@Model.Barcode</label>
+            <h3 style="color:#e24d85;font-size:30px;">@Model.Price ₫<label class="control-label cm-strong" style="margin-left:15px;font-size:15px;"><STRIKE>@Model.OldPrice ₫</STRIKE></label></h3>
+            <label class="control-label cm-strong">Số Lượng:</label>
+            <input class="form-control inputnumberquan" type="number" value="1" />
+            <hr />
+            <label class="control-label cm-strong">Sơ Lược Về Sản Phẩm :</label>
+            <p class="metadescript">@Html.Raw(HttpUtility.HtmlDecode(Model.ShortDescription))</p>
+            <hr />
+            <div class="dataproduct" data-id="@Model.Id" data-name="@Model.Name" data-quantity="" data-price="@Model.Price" data-image="@Url.Content(Model.ListImage.FirstOrDefault().PathImage)">
+                @{
+                    Html.RenderAction("AddDetail", "ProductView");
+                }
+            </div>
+        </div>
+        <div class="col-md-12 col-sm-12 col-xs-12" style="margin-top:10px;">
+            <div class="panel panel-default">
+                <div id="Tabs" role="tabpanel">
+                    <!-- Nav tabs -->
+                    <ul class="nav nav-tabs" role="tablist">
+                        <li class="active">
+                            <a href="#personal" aria-controls="personal" role="tab" data-toggle="tab" aria-expanded="true">
+                                Mô Tả
+                            </a>
+                        </li>
+
+                    </ul>
+                    <!-- Tab panes -->
+                    <div class="tab-content" style="padding-top: 20px">
+                        <div role="tabpanel" class="tab-pane active" id="personal">
+                            @Html.Raw(HttpUtility.HtmlDecode(Model.Descripstion))
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 <script>
     $('.dataproduct .add_to_cart').click(function () {
         var btnclick = $(this);
@@ -78,19 +80,12 @@
 </script>
 <script>
     $(document).ready(function () {
-        $('#imageGallery').lightSlider({
+        $('#lightSlider').lightSlider({
             gallery: true,
             item: 1,
             loop: true,
-            thumbItem: 8,
             slideMargin: 0,
-            enableDrag: false,
-            currentPagerPosition: 'left',
-            onSliderLoad: function (el) {
-                el.lightGallery({
-                    selector: '#imageGallery .lslide'
-                });
-            }
+            thumbItem: 8
         });
     });
 </script>
@@ -99,13 +94,24 @@
         position: relative;
         height: 100%;
     }
-    .lslide.active{
-        text-align:center;
-    }
-    div.lSAction a.lSPrev {
-   background-image:url(../../Assets/FrontEndCss/slsPre.png);
+    .demo {
+    width:100%;
 }
-    div.lSAction a.lSNext {
-    background-image:url(../../Assets/FrontEndCss/slsNext.png);
+ .demo ul {
+    list-style: none outside none;
+    padding-left: 0;
+    margin-bottom:0;
 }
+ .demo ul li {
+    display: block;
+    float: left;
+    margin-right: 6px;
+    cursor:pointer;
+}
+ .demo img {
+    display: block;
+    height: auto;
+    max-width: 100%;
+}
+    
 </style>
