--- a/BizwebTutorial/Views/CategoryView/Index.cshtml
+++ b/BizwebTutorial/Views/CategoryView/Index.cshtml
@@ -27,12 +27,10 @@
                         <h3><a href="/san-pham/@item.ProductAlias">@item.ProductName</a></h3>
                     </div>
                     <div class="product_price">
-                        <span class="price_new">@item.Productprice ₫</span>
+                        <span class="price_new" style="color:#e24d85;font-size:20px;">@item.Productprice ₫ <strike style="color:#808080;font-size:15px;">@item.OldPrice ₫</strike></span>
                     </div>
                     <div class="area_btn"  data-id="@item.ProductId" data-image="@Url.Content(item.ProductImage)" data-name="@item.ProductName" data-price="@item.Productprice">
-                        @{
-                            Html.RenderAction("AddCart", "ShopingCart");
-                        }
+                        <button type="button" class="button btn-cart add_to_cart btn btn-default btn_theme" title="Cho vào giỏ hàng"><span>Mua hàng</span></button>
                     </div>
                 </div>
             }
