--- a/BizwebTutorial/Views/Shared/_Layout.cshtml
+++ b/BizwebTutorial/Views/Shared/_Layout.cshtml
@@ -15,6 +15,9 @@
     <script src="~/Scripts/bootstrap.min.js"></script>
     <link href="~/Assets/FrontEndCss/Responsive.css" rel="stylesheet" />
     <link href="~/Assets/FrontEndCss/SlideMenuCss.css" rel="stylesheet" />
+    <link href="~/Assets/FrontEndCss/jGrowl-master/jGrowl-master/jquery.jgrowl.min.css" rel="stylesheet" />
+    <script src="~/Assets/FrontEndCss/jGrowl-master/jGrowl-master/jquery.jgrowl.min.js"></script>
+    <script src="~/Assets/FrontEndCss/JsCart.js"></script>
 </head>
 <body>
     <div class="padding_alltop">
@@ -277,5 +280,9 @@
         position: absolute;
         margin-left: -25px;
         padding-top: 7px;
+    }
+    .box_cartint{
+        color:#fff;
+        margin-left:20px;
     }
 </style>
