--- a/BizwebTutorial/Views/ShopingCart/DisplayCart.cshtml
+++ b/BizwebTutorial/Views/ShopingCart/DisplayCart.cshtml
@@ -22,23 +22,23 @@
             <tbody>
                 @for (int i = 0; i < Model.Count(); i++)
                 {
-                    <tr class="product_table" data-id="@Model[i].Id">
-                        <td><img src="@Model[i].ImageProduct" width="100" height="100" /></td>
-                        <td>@Model[i].NameProduct</td>
-                        <td>@Model[i].PriceProduct ₫</td>
-                        <td>
-                            @Html.HiddenFor(model => Model[i].Id)
-                            @Html.HiddenFor(model => Model[i].ImageProduct)
-                            @Html.HiddenFor(model => Model[i].NameProduct)
-                            @Html.HiddenFor(model => Model[i].PriceProduct)
-                            @Html.TextBoxFor(model => Model[i].QuantityProduct, new { @type = "number", @class = "form-control" })
-                        </td>
-                        @{
+                <tr class="product_table" data-id="@Model[i].Id">
+                    <td><img src="@Model[i].ImageProduct" width="100" height="100" /></td>
+                    <td>@Model[i].NameProduct</td>
+                    <td>@Model[i].PriceProduct ₫</td>
+                    <td>
+                        @Html.HiddenFor(model => Model[i].Id)
+                        @Html.HiddenFor(model => Model[i].ImageProduct)
+                        @Html.HiddenFor(model => Model[i].NameProduct)
+                        @Html.HiddenFor(model => Model[i].PriceProduct)
+                        @Html.TextBoxFor(model => Model[i].QuantityProduct, new { @type = "number", @class = "form-control" })
+                    </td>
+                    @{
                             var result1 = Model[i].QuantityProduct * Model[i].PriceProduct;
-                        }
-                        <td class="TotalLineCart" data-moneyline="@result1">@result1 ₫</td>
-                        <td><a href="/ShopingCart/Deleteproduct/@Model[i].Id"><i class="fa fa-trash-o"></i></a></td>
-                    </tr>
+                    }
+                    <td class="TotalLineCart" data-moneyline="@result1">@result1 ₫</td>
+                    <td><a class="delete_itemcart" data-id="@Model[i].Id"><i class="fa fa-trash-o"></i></a></td>
+                </tr>
                             }
             </tbody>
         </table>
@@ -54,11 +54,11 @@
                         allTotalmoney += result1;
                     }
                 }
-                <p style="margin-top:10px;;padding-left:10px;padding-right:10px;">Tổng Tiền : @allTotalmoney ₫</p>
+                <p style="margin-top:10px;padding-left:10px;padding-right:10px;">Tổng Tiền : @allTotalmoney ₫</p>
             </div>
             <input type="button" id="paymentbtn" class="btn btn-default" value="Thanh Toán" style="background:#e24d85;color:#ffffff;margin-left:24px;" />
         </a>
-        <button id="getmodalshow" style="display:none;"></button>
+
         <a href="/tat-ca-san-pham" style="float:left;">
             <input type="button" class="btn btn-default" value="Tiếp Tục Mua hàng" style="background:#e24d85;color:#ffffff" />
         </a>
@@ -90,5 +90,16 @@
     }
 </style>
 <script>
-
+    $('.delete_itemcart').click(function () {
+        var item_decart = $(this);
+        var Id = item_decart.attr('data-id');
+        $.ajax({
+            type: "GET",
+            url: 'ShopingCart/Deleteproduct?Id=' + Id + '',
+            contentType: "application/json",
+            success: function (data) {
+                $('tr.product_table[data-id=' + Id + ']').remove();
+            }
+        });
+    });
 </script>
